Made most of the Navbar
I have given all of the necessary components (not to be confused with react components) to the navigation, where only small changes will be needed

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nova+Flat&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logo__title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+h3 {
+  color: #ffffff;
+  margin-left: 30px;
+  font-family: 'Nova Flat', cursive;
+  font-size: 20px;
+}
+.navbar__background {
+  margin: 25px auto;
+  padding: 30px;
+  display: flex;
+  width: 857px;
+  /* Height 52.23px before */
+  height: 70px;
+  background-color: rgba(235, 232, 232, 0.14);
+  border-radius: 32px;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+
+.navbar__background .nasa__logo {
+  color: #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav__links {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav__links ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  margin: auto 3rem auto 5rem;
+  font-family: 'Nova Flat', cursive;
+  font-size: 20px;
+}
+
+ul {
+  list-style: none;
 }
