--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   display: flex;
 }
 h3 {
-  color: #ffffff;
+  color: #E8422D;
   margin-left: 30px;
   font-family: 'Nova Flat', cursive;
   font-size: 20px;
