--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@ body {
 
 .logo__title {
   display: flex;
+  position: relative;
+  top: -5px;
 }
 h3 {
   color: #E8422D;
@@ -26,12 +28,13 @@ h3 {
   /* Height 52.23px before */
   height: 70px;
   background-color: rgba(235, 232, 232, 0.14);
-  border-radius: 32px;
+  /* border-radius 32px */
+  border-radius: 30px;
   justify-content: space-between;
 }
 
 
-.navbar__background .nasa__logo {
+.navbar__background {
   color: #ffffff;
 }
 
@@ -46,8 +49,20 @@ h3 {
   margin: auto 3rem auto 5rem;
   font-family: 'Nova Flat', cursive;
   font-size: 20px;
+  position: relative;
+  top: -5px;
+  transition: all ease-in-out 300ms;
+}
+
+.nav__links ul li a:hover {
+  color: rgba(255, 255, 255, 0.407); 
 }
 
 ul {
   list-style: none;
+}
+
+#nasa__logo{
+  position: relative;
+  top: -10px;
 }
