--- a/src/App.css
+++ b/src/App.css
@@ -65,4 +65,10 @@ ul {
 #nasa__logo{
   position: relative;
   top: -10px;
+  transition: all ease-in-out 300ms;
+}
+
+#nasa__logo:hover {
+  position: relative;
+  top: -20px;
 }
